# mldevops_exercise

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  wandb_task4.py
