[tool.poetry]
name = "mldevops-exercise"
version = "0.1.0"
description = "AML exercise - lab 3"
authors = ["Kat165 <kasia17wilk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "2.1.3"
torch = "2.5.1"
matplotlib = "3.9.2"
torchvision = "0.20.1"
black = "24.4.0"
pyupgrade = "3.15.2"
wandb = "^0.18.7"
tensorboard = "2.18.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
